--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,16 +1,42 @@
-name: 020-manual-input-workflo!!!!!!
+name: My Workflow
 
 on:
-  workflow_dispatch:
-    inputs:
-      name:
-        description: 'Person to greet'
-        default: 'World'
-        required: true
+  workflow_run:
+    workflows: ["Scheduled Workflow"]
+    types:
+      - completed
 
 jobs:
-  greet:
+  job1:
     runs-on: ubuntu-latest
     steps:
-    - name: Send greeting
-      run: echo "Hello ${{github.event.inputs.name}}!!!"
+      - name: Step 1
+        run: echo "This is step 1"
+
+  job2:
+    runs-on: ubuntu-latest
+    needs: job1
+    steps:
+      - name: Step 2
+        run: echo "This is step 2"
+
+  manual_approval:
+    runs-on: ubuntu-latest
+    needs: job2
+    steps:
+      - name: Manual Approval
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const response = await github.rest.actions.createOrUpdateWorkflowRun({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              workflow_id: context.workflow,
+              ref: context.sha,
+              inputs: {
+                continueWorkflow: true
+              }
+            });
+            console.log(response.data);
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
