--- a/.github/workflows/maven_two.yml
+++ b/.github/workflows/maven_two.yml
@@ -4,9 +4,8 @@ on:
   pull_request:
     branches:
       - develop
+      - master
   push:
-    branches: [ "master" ]
-  pull_request:
     branches: [ "master" ]
 
 jobs:
