--- a/.github/workflows/maven_three.yml
+++ b/.github/workflows/maven_three.yml
@@ -3,10 +3,10 @@ name: Manual
 on:
   workflow_dispatch:
     inputs:
-      name:
-        description: 'Person to greet'
-        default: 'World'
+      environment:
+        description: 'Environment to deploy to'
         required: true
+        type: environment
 
 jobs:
   greet:
