--- a/.github/workflows/maven_three.yml
+++ b/.github/workflows/maven_three.yml
@@ -6,7 +6,12 @@ on:
       environment:
         description: 'Environment to deploy to'
         required: true
-        type: environment
+        default: 'production'
+        type: choice
+        options: 
+          - dev
+          - int
+          - prod
 
 jobs:
   greet:
