--- a/.github/workflows/maven_two.yml
+++ b/.github/workflows/maven_two.yml
@@ -1,9 +1,11 @@
 name: Auto
 
 on:
-  push:
-    branches: [ "master" ]
   pull_request:
+    branches:
+      - develop
+      - master
+  push:
     branches: [ "master" ]
 
 jobs:
